turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: missing arguments for method setX in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setX() = 8
  ^Turmite:47: error: missing arguments for method setY in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
  setY() = 33
  ^